# PyGraudit

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
DOCS/: engine.md  formatter.md  readme.md  types.md
DOCS/pygraudit/: engine.md  index.md  module.md  types.md
pygraudit/: __init__.py  __main__.py  engine.py  formatter.py  types.py
pygraudit/signatures/: java.db
